fixed hellyer on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -461,7 +461,17 @@ font-size: 5vw;
 	padding-top: 15%;
 	
 }
-
+#innerTitlesHellyer {
+	width: 50%;
+	padding-top: 15%;
+	font-family: futura-pt, sans-serif;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 9vw;
+	color: #ffffff;
+	line-height: 1;
+	
+}
 
 
 #innerTitlesKirby {
